set the div to the size of the album image we're expecting, we want the text to line up nicely even though Amazon sometimes returns a smaller image than we'd like.  Centering the album image as well to make it look even better.  This also is a nice stop gap to our current problem of not getting even our local no_image returned for some reason.

--- a/dumbhippo/trunk/server/web/css2/site-positions.css
+++ b/dumbhippo/trunk/server/web/css2/site-positions.css
@@ -285,6 +285,8 @@ form {
 
 .dh-song-image {
 	float:				left;
+	width:				75px;
+	text-align:			center;
 }
 
 .dh-song-with-art .dh-song-info {
